generator client {
    provider = "prisma-client-js"
}

datasource db {
    provider     = "postgresql"
    url          = env("DATABASE_URL")
    relationMode = "foreignKeys"
}
model User {
    id        String   @id @default(uuid())
    email     String   @unique
    name      String
    password  String
    termsAccepted Boolean @default(false)
    privacyAccepted Boolean @default(false)
    createdAt DateTime @default(now())
    updatedAt DateTime @updatedAt
    system_id String
    system    System   @relation("UserSystem", fields: [system_id], references: [id])
    roles     UserRole[]
    // userModules UserModule[]
    updateHistories UserUpdateHistory[]

    @@index([system_id])
}

model System {
    id          String   @id @default(uuid())
    name        String
    description String
    createdAt   DateTime @default(now())
    updatedAt   DateTime @updatedAt
    users       User[]   @relation("UserSystem")
    roles       Role[]   @relation("SystemRole")
    modules     Module[] @relation("SystemModule")
}

model Role {
    id          String   @id @default(uuid())
    name        String
    description String
    createdAt   DateTime @default(now())
    system_id   String
    // system      System   @relation(fields: [system_id], references: [id])
    userRoles   UserRole[]
    system      System   @relation("SystemRole", fields: [system_id], references: [id])
    roleModules RoleModule[]

    @@index([system_id])
}
model Module {
    id          String   @id @default(uuid())
    name        String
    description String
    createdAt   DateTime @default(now())
    updatedAt   DateTime @updatedAt
    system_id   String
    system      System   @relation("SystemModule", fields: [system_id], references: [id])
    roleModules RoleModule[]

    @@index([system_id])
}
model UserRole {
    id      String @id @default(uuid())
    user_id String
    user    User   @relation(fields: [user_id], references: [id])
    role_id String
    role    Role   @relation(fields: [role_id], references: [id])
    createdAt DateTime @default(now())
    updatedAt DateTime @updatedAt

    @@index([user_id])
    @@index([role_id])
}

model RoleModule {
    id        String @id @default(uuid())
    role_id   String
    role      Role   @relation(fields: [role_id], references: [id])
    module_id String
    module    Module @relation(fields: [module_id], references: [id])
    createdAt DateTime @default(now())
    updatedAt DateTime @updatedAt

    @@index([role_id])
    @@index([module_id])
}

model UserUpdateHistory {
    id          String   @id @default(uuid())
    user_id     String
    user        User     @relation(fields: [user_id], references: [id])
    description String
    updatedAt   DateTime @default(now())

    @@index([user_id])
}